FIX: tab edit jump by move editForm to sub div to prevent global redraw

--- a/css/mytabs.css
+++ b/css/mytabs.css
@@ -2,7 +2,7 @@
 	box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
-.content.panel .showForm input{
+.content.panel .showForm.display input{
 	border: none;
 	background: none;
 }
